--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/jest": "^25.1.4",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "^25.1.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.1.3",
+    "ts-jest": "^25.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
