--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^25.1.0",
