--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
     "build:prod": "env NODE_ENV=production webpack --config webpack.config.js",
-    "dev": "env NODE_ENV=development webpack-dev-server",
+    "dev": "env NODE_ENV=development node ./bin/dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,11 +29,16 @@
     "@types/jest": "^25.1.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "autoprefixer": "^10.2.3",
     "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^25.1.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "postcss": "^8.2.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^4.2.0",
     "style-loader": "^1.1.3",
     "ts-jest": "^25.2.1",
     "ts-loader": "^7.0.5",
@@ -42,5 +47,6 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-node-externals": "^1.7.2"
-  }
+  },
+  "browserslist": "> 0.0001%, not dead"
 }
