--- a/package.json
+++ b/package.json
@@ -20,19 +20,27 @@
   },
   "homepage": "https://github.com/Taoffy/reddit-react#readme",
   "dependencies": {
+    "classnames": "^2.3.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/enzyme": "^3.10.11",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.1.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "autoprefixer": "^10.2.3",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "html-webpack-plugin": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
